--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@ orderBtn.onclick = async () => {
   try {
     await fetch(SCRIPT_URL, {
       method: "POST",
+      mode: "no-cors",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({ nickname, visit, items, total })
     });
@@ -338,4 +339,5 @@ copyBtn.onclick = () => {
 
 </body>
 </html>
+
 
