--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ h1 { font-weight:800; letter-spacing:-0.02em; }
 </div>
 
 <script>
-const SCRIPT_URL = "여기에_본인_GAS_URL";
+const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbw6IoTlHh-xns7CmR_GuhTABj64WCDksVYmwwLmRXqViOF6AYYeLbW6xJds5M8x2v0D/exec";
 
 /* =========================
    [ADD v1.03] 주문 기간 제어 (하드코딩)
@@ -240,3 +240,4 @@ document.getElementById("orderBtn").onclick = async () => {
 </script>
 </body>
 </html>
+
