--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwhe734NOzgGe3PfiDwU
 
 // 🔧 운영 모드 선택
 // "WEEKLY" | "DATE_RANGE" | "ALWAYS_OPEN" | "ALWAYS_CLOSED"
-const SALE_MODE = "WEEKLY";
+const SALE_MODE = "ALWAYS_OPEN";
 
 // 매주 반복 운영 (WEEKLY)
 const WEEKLY_SETTING = {
@@ -181,3 +181,4 @@ checkSalePeriod();
 </script>
 </body>
 </html>
+
