--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ h1 { text-align:center; font-size:22px; margin-bottom:18px; }
 .field label { font-size:13px; font-weight:600; display:block; margin-bottom:6px; }
 .field input,.field select { width:100%; padding:12px; border-radius:10px; border:1px solid #ddd; }
 .product { border:1px solid #eee; border-radius:14px; overflow:hidden; margin-bottom:18px; }
-.product img { width:100%; height:220px; object-fit:cover; background:#eee; }
+.product img { width:100%; aspect-ratio: 4 / 3; object-fit:cover; background:#eee; }
 .product-body { padding:12px; }
 .name { font-weight:700; margin-bottom:4px; }
 .price { font-weight:800; color:#2f80ed; margin-bottom:10px; }
@@ -171,3 +171,4 @@ copyBtn.onclick=()=>{
 </script>
 </body>
 </html>
+
